# stocks-overview

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  conda-environment.yml  pyproject.toml
.github/: CODEOWNERS
src/stocks_overview/app/: app.py
