[tool.poetry]
name = "stocks-overview"
version = "0.1.0"
description = ""
authors = ["DSNJTurtle <sebastian.t.kirchner@gmail.com>"]
readme = "README.md"
packages = [{include = "stocks_overview", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.4"
typer = {extras = ["all"], version = "^0.9.0"}
pandas-stubs = "^2.1.4.231227"


[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
isort = "^5.13.2"
pre-commit = "^3.6.0"
commitizen = "^3.13.0"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
